# ares

./: .coveragerc  .coveralls.yml  .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  CHANGES  CITATION  INSTALL.rst  LICENSE  README  README.md  README.rst  THANKS.rst  bitbucket-pipelines.yml  codecov.yml  deploy.sh  pyproject.toml  remote.py  requirements.txt  run_bbp.sh  run_tests.sh  run_tests_local.sh  setup.py
ares/: __init__.py
doc/: Makefile  README  acknowledgements.rst  analysis.rst  conf.py  contrib_start_to_finish.rst  contributing.rst  evolve.rst  example_21cm_multipop.rst  example_21cm_simple.rst  example_adv_RT_w_He.rst  example_bh.rst  example_bh_pop.rst  example_chem.rst  example_crb_br.rst  example_crb_ion.rst  example_crb_lw.rst  example_crb_uv.rst  example_crb_xr.rst  example_customization.rst  example_cuvb.rst  example_cxrb.rst  example_edges.rst  example_embed_ares.rst  example_fcoll_alternatives.rst  example_galaxypop.rst  example_grid.rst  example_grid_I.rst  example_grid_II.rst  example_grid_III.rst  example_grid_analysis.rst  example_gs_multipop.rst  example_gs_phenomenological.rst  example_gs_standard.rst  example_ham.rst  example_igm.rst  example_inline_analysis.rst  example_litdata.rst  example_mc_sampling.rst  example_mcmc_I.rst  (+74 more)
docs/: acknowledgements.rst  conf.py  contributing.rst  example_crb_uv.rst  example_crb_xr.rst  example_edges.rst  example_gs_hybrid.rst  example_gs_multipop.rst  example_gs_phenomenological.rst  example_gs_standard.rst  example_inline_analysis.rst  example_litdata.rst  example_mcmc_analysis.rst  example_mcmc_gs.rst  example_mcmc_lf.rst  example_popIII.rst  example_pop_cluster.rst  example_pop_dusty.rst  example_pop_sps.rst  example_rt06_2.rst  examples.rst  generate_figures.py  history.rst  index.rst  install.rst  (+23 more)
(+1174 files in other folders)
